Tue Feb 24 11:49:48 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (time_zone_name): should be US-ASCII only if all 7-bits,
	  otherwise locale encoding.  [ruby-core:68230] [Bug #10887]

Tue Feb 24 09:47:07 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (chompped_length): enable smart chomp for all non-dummy
	  encoding strings, not only default_rs.
	  [ruby-core:68258] [Bug #10893]

Mon Feb 23 23:19:42 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/vcs.rb (IO.popen): support :chdir option.

	* tool/vcs.rb (VCS::GIT.get_revisions): use :chdir option instead
	  of -C option which is not supported by older git.
	  [ruby-dev:48880] [Bug #10890]

Mon Feb 23 15:26:39 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_split_m): raise ArgumentError at broken string
	  not RegexpError, as Regexp is not involved in.
	  [ruby-core:68229] [Bug #10886]

Mon Feb 23 07:25:29 2015  Benoit Daloze  <eregontp@gmail.com>

	* time.c: Zone encoding should be US-ASCII if all 7-bits. Fix r46907.

	* test/ruby/test_time.rb, test/ruby/test_time_tz.rb: Update tests.

Sun Feb 22 18:33:42 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* common.mk: use ruby organization for rubyspec.

Sun Feb 22 15:56:06 2015  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_insnhelper.c (rb_vm_rewrite_cref_stack): copy nd_refinements
	  of original crefs. It fixes segmentation fault when calling
	  refined method in duplicate module. [ruby-dev:48878] [Bug #10885]

	* vm_core.h, class.c: change accordingly.

	* test/ruby/test_refinement.rb: add a test for above.

Sun Feb 22 10:43:37 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace_call_finalizer): control GC execution during
	  force firnalizations at the end of interpreter process.
	  [Bug #10768]

	  1) Prohibit incremental GC while running Ruby-level finalizers
	     to avoid any danger.
	  2) Prohibit GC while invoking T_DATA/T_FILE data structure